<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:background="#00695C"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/title_background_5" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/title_background_5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="25dp"
                android:text="Ace"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:fontFamily="@font/aclonica"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:text="Login/Sign Up"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:fontFamily="@font/aclonica"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                />

            <LinearLayout
                android:id="@+id/ll_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/header"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical">

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:paddingStart="10dp">

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/ic_dot"
                    android:backgroundTint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/point1"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="7dp"
                        android:layout_height="7dp"
                        android:layout_marginTop="9dp"
                        android:background="@drawable/ic_dot"
                        android:backgroundTint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/point2"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="7dp"
                        android:layout_height="7dp"
                        android:layout_marginTop="9dp"
                        android:background="@drawable/ic_dot"
                        android:backgroundTint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/point3"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="7dp"
                        android:layout_height="7dp"
                        android:layout_marginTop="9dp"
                        android:background="@drawable/ic_dot"
                        android:backgroundTint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/point4"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="7dp"
                        android:layout_height="7dp"
                        android:layout_marginTop="9dp"
                        android:background="@drawable/ic_dot"
                        android:backgroundTint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/point5"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_google"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_intro"
                >

                    <FrameLayout
                        android:id="@+id/blur_google"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#BC000000">
                        
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="8dp"
                            android:src="@drawable/google_icon"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="Continue with Google"
                            android:textColor="@android:color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    </FrameLayout>


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</RelativeLayout>